# campout

./: .gitignore  DECISIONS.md  PROTOCOL.md  README.md  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
client/: index.html
client/css/: style.css
client/js/: config.js  hud.js  main.js  network.js  scene.js
gateway/: alembic.ini  connections.py  db.py  dockerfile  main.py  requirements.txt  socket_client.py
gateway/migrations/: env.py
gateway/migrations/versions/: a1b2c3d4e5f6_initial_schema.py  schema_v1_1.py
server/: .dockerignore  CMakeLists.txt  dockerfile
server/src/: game_server.cpp  game_server.h  main.cpp  map.cpp  map.h  player.h  types.h
